# adventofcode-solutions

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .prettierignore  .shellcheckrc  README.md  answers.yaml  inputs.json  inputs.tar.gpg  mise.toml  pyrightconfig.json  ruff.toml  solvers.yaml
.github/: CMakeUserPresets.json  renovate.json5
.github/actions/cmake-project-finalize/: action.yaml  init.sh
.github/actions/cmake-project-setup/: action.yaml  init.sh
.github/actions/extract-inputs/: action.yaml  extract.sh
.github/actions/hardened-libc++/: action.yaml  build.sh  init.sh
.github/actions/homebrew-packages-setup/: action.yaml  checks-after-install.sh  final-changes.sh  init.sh  install-packages.sh  install.sh  validate-action-inputs.sh
.github/actions/mise-project-setup/: action.yaml  init.sh  install-tools.sh
.github/actions/uv-project-setup/: action.yaml  init.sh
.github/files/: CMakeUserPresets.json  conan-profile-clang-with-hardened-libc++  conan-profile-clang-with-libc++  conan-profile-clang-with-libc++-sanitizers  conan-profile-gcc-libstd++-for-clang  settings_user.yml
.github/scripts/: delete_obsolete_mise_caches.py
.github/workflows/: cache-cleanup-after-closed-pr.yaml  cache-cleanup-after-mise-update.yaml  check-clang-tidy.yaml  ci-python-project.yaml  ci-solvers-cpp.yaml  ci-solvers-rust.yaml  ci.yaml  cpp-build-test-run.yaml  homebrew-clean-cache.yaml  homebrew-prepare-cache.yaml  mise-prepare-cache.yaml  mise-task.yaml  mise-uv-prepare-cache.yaml  mise-uv-task.yaml  pr-cleanup-after-merge.yaml  python-run.yaml  rust-build-test-run.yaml  temp.yaml
aoc-main/: mise.toml  pyproject.toml  pyrightconfig.json
aoc-main/src/aoc_main/: _answers.py  _cmake_presets.py  _exec_solver.py  _inputs.py  _logging.py  _solver_cpp.py  _solver_python.py  _solver_rust.py  _solvers.py  _types.py  _utils.py  main.py  py.typed
aoc-main/tests/: test_cmake_presets.py  test_solver_id.py
mise-tasks/check/: pyright-repo.sh  shellcheck-config-enabled-optional-checks.py  shellcheck.sh  shfmt.sh
mise-tasks/cpp/: verify-runtime-stdlib.py
mise-tasks/fix/: shfmt.sh
mise-tasks/github/cache/: remove-for-pr.py
mise-tasks/inputs/: add.py  check.py  extract.py
solvers/cpp/: .bazelrc  .bazelrc.ci.example  .bazelrc.local.example  .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  MODULE.bazel  README.md  WORKSPACE  conanfile.txt  mise.toml
solvers/cpp/src/: BUILD.bazel  CMakeLists.txt
solvers/cpp/src/lib/: BUILD.bazel  CMakeLists.txt  answer.hpp  convert.hpp  my_chunk_view.hpp  my_chunk_view.test.cpp  my_enumerate_view.hpp  my_enumerate_view.test.cpp  my_fold_left_first.hpp  my_fold_left_first.test.cpp  my_slide_view.hpp  my_slide_view.test.cpp  my_stride_view.hpp  my_stride_view.test.cpp  named_type.hpp
solvers/cpp/src/test_utils/: BUILD.bazel  CMakeLists.txt  test_utils.cpp  test_utils.hpp
solvers/python/: mise.toml  pyproject.toml  pyrightconfig.json
solvers/python/src/aoc/tooling/: coordinates.py  debugger.py  digraph.py  directions.py  map.py  ranges.py  run.py
solvers/python/src/aoc/y2023/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d20.py
solvers/python/tests/: test_coordinates.py
solvers/rust/: Cargo.toml  mise.toml  rustfmt.toml
solvers/rust/src/: answer.rs  lib.rs  map.rs  run.rs  test_utils.rs
