[project]
name = "aoc"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "attrs ==26.1.0",
]

[dependency-groups]
dev = [
  "pytest ==9.0.3",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.mypy]
strict_optional = true

[tool.pytest]
addopts = [
  "--import-mode=importlib",
]
strict = true

[tool.ruff]
extend = "../../ruff.toml"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["INP001"]
