[package]
name = "aoc"
edition = "2024"

[dependencies]
itertools = "=0.14.0"
log = { version = "=0.4.27", features = ["release_max_level_warn"] }
simple_logger = "=5.0.0"

[lints.clippy]
# Lint groups: https://doc.rust-lang.org/clippy/lints.html
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Allowed lints
missing_panics_doc = "allow"

[lints.rust]
# Lint groups: https://doc.rust-lang.org/rustc/lints/groups.html
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
refining-impl-trait = "warn"
unused = "warn"
