load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "lib",
    hdrs = glob(["*.hpp"]),
    visibility = ["//src:__subpackages__"],
)

cc_test(
    name = "lib_test",
    srcs = glob(["*.test.cpp"]),
    deps = [
        ":lib",
        "//src/test_utils",
        "@googletest//:gtest_main",
    ],
)
